* Make javax inject api a transitive dependency * Updated pustike maven parent version to 0.1.3 * Other general improvements